<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_decs"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="55dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_inc"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="55dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2_inc"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="169dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2_decs"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="169dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="@string/score_1_label"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_value"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_2_label"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="194dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_2_value"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="194dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>